[APPREQ-457] fix IE6 layout issue
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@3482 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/mac_ie.css
+++ b/projects/Media/docroot/assets/css/mac_ie.css
@@ -290,11 +290,17 @@ margin-bottom: 3px;
 /* internal table in ymal pages */
 table.ymal {
     width			: 100%;
-    align 			: center;
+    text-align 		: center;
 	padding-top		: 5px;
 	padding-bottom	: 0px;	
-	padding-left	: 0px;	
-	padding-right	: 0px;	
+	padding-left	: 0px;
+	padding-right	: 0px;
+	border-collapse : collapse;
+}
+
+form.ymal {
+	padding: 0;
+	margin: 0;
 }
 
 /* product cell, containing pic, link, price */
