--- a/projects/Media/docroot/assets/css/pc_ie.css
+++ b/projects/Media/docroot/assets/css/pc_ie.css
@@ -292,12 +292,18 @@ text-indent: -10px;
 
 /* internal table in ymal pages */
 table.ymal {
-    width			: 100%;
-    align 			: center;
+	width			: 100%;
+	text-align 		: center;
 	padding-top		: 5px;
 	padding-bottom	: 0px;	
-	padding-left	: 0px;	
-	padding-right	: 0px;	
+	padding-left	: 0px;
+	padding-right	: 0px;
+	border-collapse : collapse;
+}
+
+form.ymal {
+	padding: 0;
+	margin: 0;
 }
 
 /* product cell, containing pic, link, price */
@@ -327,7 +333,7 @@ table.ymal caption {
 table.ymal_prod {
     width			: 100%;
     text-align		: center;
-	padding			: 10px;	
+    padding			: 10px;	
 }
 
 
